# amateraview

./: Cargo.toml
amateraview/: Cargo.toml
amateraview-common/: Cargo.toml
amateraview-common/src/: lib.rs
amateraview-common/src/communication/: mod.rs
amateraview-common/src/plugin/: mod.rs
amateraview-common/src/ui/: button.rs  mod.rs
amateraview-connection/: Cargo.toml
amateraview-connection/src/: length_delimited_receiver.rs  length_delimited_sender.rs  lib.rs
amateraview/src/: configuration.rs  main.rs
amateraview/src/state/: mod.rs  plugin.rs
amateraview/src/ui/: mod.rs  pane.rs
amateraview/src/ui/pane/: pane_type.rs
amateraview/src/work/: mod.rs
amateraview/src/work/plugins/: mod.rs
plugin1/: Cargo.toml
plugin1/src/: main.rs
