[workspace]
default-members = ["amateraview"]
members = ["amateraview", "amateraview-common", "plugin1"]

resolver = "3"

[workspace.dependencies]
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

amateraview-common = { path = "amateraview-common" }

[profile.dev]
opt-level = 1