[workspace]
default-members = ["amateraview"]
members = ["amateraview", "amateraview-common", "amateraview-connection", "plugin1"]

resolver = "3"

[workspace.dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
eyre = { version = "0.6", features = ["default", "track-caller"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = { version = "1.0" }
semver = { version = "1.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
#itertools = "0.14.0"

amateraview-common = { path = "amateraview-common" }
amateraview-connection = { path = "amateraview-connection" }

[profile.dev]
opt-level = 1
