[package]
name = "amateraview"
version = "0.1.0"
edition = "2024"

[dependencies]
amateraview-common.workspace = true
eyre.workspace = true
iced = { version = "0.13.1", features = ["advanced", "multi-window", "markdown", "image", "canvas", "lazy"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
