[package]
name = "amateraview"
version = "0.1.0"
edition = "2024"

[dependencies]
amateraview-common.workspace = true
amateraview-connection.workspace = true
eyre.workspace = true
iced = { version = "0.13", features = ["advanced", "multi-window", "markdown", "image", "canvas", "lazy", "tokio"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
